# kafka-client

./: .gitignore  CHANGES.md  Kafka-Internal-Request.html  Kafka-Internal-Response.html  Kafka-Internal-Transport.html  Kafka-Internal-Types.html  Kafka-Internal.html  Kafka.hs  Kafka.html  LICENSE  README.md  TODO.md  default.nix  doc-index.html  index-frames.html  index.html  kafka-client.cabal  mini_Kafka-Internal-Request.html  mini_Kafka-Internal-Response.html  mini_Kafka-Internal-Transport.html  mini_Kafka-Internal-Types.html  mini_Kafka-Internal.html  mini_Kafka.html  shell.nix
Kafka/: V07.hs
Kafka/Internal/: Request.hs  Response.hs  Transport.hs  Types.hs
Kafka/V07/: Internal.hs
Kafka/V07/Internal/: Connection.hs  Request.hs  Response.hs  Transport.hs  Types.hs
examples/: consoleConsumer.hs  consoleProducer.hs
integration-test/: IntegrationTest.hs  KafkaSpec.hs
scripts/: update-gh-pages.sh
src/Kafka/: Internal.hs
src/Kafka/Internal/: Request.hs  Response.hs  Transport.hs  Types.hs
test-lib/Test/Kafka/: Arbitrary.hs  Managed.hs
test/Kafka/Internal/: TypesSpec.hs
test/Kafka/V07/: InternalSpec.hs
test/Kafka/V07/Internal/: TypesSpec.hs
