name          : kafka-client
version       : 0.1.0.0
synopsis      : Haskell client library for Apache Kafka.
license       : MIT
license-file  : LICENSE
author        : Abhinav Gupta
maintainer    : mail@abhinavg.net
category      : Network
build-type    : Simple
cabal-version : >=1.10

library
  exposed-modules  : Kafka.V07
                   , Kafka.V07.Internal
                   , Kafka.V07.Internal.Connection
                   , Kafka.V07.Internal.Request
                   , Kafka.V07.Internal.Transport
                   , Kafka.V07.Internal.Types
  ghc-options      : -Wall
  build-depends    : base       >= 4.7   && < 4.8
                   , bytestring >= 0.10
                   , cereal     >= 0.4
                   , containers >= 0.5
                   , digest     >= 0.0.1
                   , network    >= 2.4
                   , snappy     >= 0.2
                   , time       >= 1.4
                   , zlib       >= 0.5

                   -- Test suite dependencies:
                   -- Workaround for ghc-mod #339. Uncomment while developing.
                   -- , hspec              >= 2.0
                   -- , hspec-discover     >= 2.1
                   -- , QuickCheck         >= 2.5
  default-language : Haskell2010

test-suite spec
  type             : exitcode-stdio-1.0
  ghc-options      : -Wall
  hs-source-dirs   : test
  main-is          : Spec.hs
  build-depends    : base
                   , bytestring
                   , cereal
                   , hspec          >= 2.0
                   , hspec-discover >= 2.1
                   , QuickCheck     >= 2.5
                   , time

                   , kafka-client
  default-language : Haskell2010
